<resources>
    <string name="app_name">TodoList</string>
    <string name="Welcome">Welcome to Todo List!</string>
    <string name="Proceed">Proceed</string>
    <string name="About">About</string>
    <string name ="title">Title</string>
    <string name="description">Description</string>
    <string name="addNote">Add note... </string>
    <string name="priority">Priority</string>
    <string name="hello_customer">Hello Customer</string>
    <string name="hello">Hello</string>
    <string name="enter_name">Enter name here...</string>
    <string name="dark_background">Dark background</string>
    <string name="light_background">Light backround</string>
    <string name="font_change">Change font</string>
    <string name="change_background">Change background</string>
    <string name="toggle_color">Toggle color</string>
    <string name="add_picture">+ Add picture</string>
    <string name="add_mail">+ Add Email</string>

</resources>
