<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/background_change"
        android:title="@string/change_background"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/backgroundChange_0"
                android:title="@string/dark_background"
                app:showAsAction="never" />

            <item
                android:id="@+id/backgroundChange_1"
                android:title="@string/light_background"
                app:showAsAction="never"/>
        </menu>


    </item>

    <item
        android:id="@+id/font_change"
        android:checkable="true"
        android:title="@string/font_change"
        app:showAsAction="never" />


    <item
        android:title="blabla"
        />
</menu>