<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_0">



    <TextView
        android:id="@+id/WelcomeTextView"
        android:text="@string/Welcome"
        android:textSize="35dp"
        android:gravity="center"
        android:textStyle="italic|bold"
        android:textColor="#FFFFFF"
        android:shadowColor="#000000"
        android:layout_marginTop="75dp"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </TextView>

<Button
    android:id="@+id/ProceedButton"
    android:text="@string/Proceed"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:background="@drawable/button_0"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_marginTop="400dp"
    android:textColor="#FFFFFF"
    android:onClick="ProceedClicked">
</Button>


    <Button
        android:id="@+id/AboutButton"
        android:text="@string/About"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/button_0"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF">
    </Button>




</LinearLayout>
