<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddEditNoteActivity"
    android:orientation="vertical"
    android:background="@drawable/background_0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="ENTER YOUR NOTE"
            android:textColor="#FFFFFF"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="30dp"
            android:textStyle="italic|bold"
            android:layout_marginTop="70dp"
            android:layout_gravity="center"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text"
        android:layout_marginHorizontal="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        android:layout_marginTop="8dp"
        />
    <EditText
        android:id="@+id/edit_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="text"
        android:layout_marginHorizontal="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFFFFF"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp">

    <TextView
        android:id="@+id/text_view_priority"
        android:text="@string/priority"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="3dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"/>


        <EditText
            android:id="@+id/edit_text_priority"
            android:text="1"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:inputType="number"
            android:backgroundTint="@android:color/transparent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_phone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="2dp">

        <EditText
            android:id="@+id/edit_text_phone"
            android:inputType="phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="Enter phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:layout_marginHorizontal="10dp"
            android:textColor="#FFFFFF"
            />

        <ImageButton
            android:id="@+id/image_view_call_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_call"
            android:onClick="onClickCallBtn"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/image_view_picture"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_photo"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="2dp"
        android:visibility="visible"
        />


    <EditText
        android:id="@+id/edit_text_note"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@drawable/edit_text_background0"
        android:backgroundTint="#FAE466"
        android:maxLines="3"
        android:textColor="#000000"
        android:textStyle="bold"
        android:hint="@string/addNote"
        android:padding="8dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

    <Button
        android:id="@+id/button_save"
        android:background="@drawable/button_0"
        android:textColor="#FFFFFF"
        android:text="Save"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:onClick="saveNote"
        />
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="cancel"
            android:onClick="noteCanceled"
            android:textColor="#FFFFFF"
            android:background="@drawable/button_0"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"

            />
    </RelativeLayout>
</LinearLayout>